# forum

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: authorization.md  opcodes.md  permissions.md
docs/resources/: categories.md  threads.md  users.md
migrations/: 20240722175620_init.sql  20240722191722_update_colums_types.sql  20240722193230_update_colums_types_2.sql  20240722195545_update_tables.sql  20240724112612_secrets.sql  20240826075729_sessions.sql
src/: lib.rs  main.rs
src/gateway/: connection.rs
src/models/: category.rs  database.rs  error.rs  gateway.rs  message.rs  mod.rs  requests.rs  secret.rs  session.rs  thread.rs  user.rs
src/routes/: auth.rs  categories.rs  category.rs  gateway.rs  mod.rs  threads.rs  users.rs
src/utils/: authorization.rs  convectors.rs  middleware.rs  mod.rs  snowflake.rs
