[package]
name = "forum"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.7.0"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "macros"
] }

validator = { version = "0.18.1", features = ["derive"] }

dotenvy = "0.15.7"
log = "0.4.21"
env_logger = "0.11.3"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
bitflags = "2.5.0"
sha256 = "1.5.0"
rsa = "0.9.6"
reqwest = "0.12.5"