[package]
name = "forum"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.7.0"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "macros"
] }
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.21"
env_logger = "0.11.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["serde"] }
bitflags = "2.5.0"
sha256 = "1.5.0"
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
base64 = "0.22.1"
nanoid = "0.4.0"
rand = "0.8.5"
regex = "1.10.5"
futures = "0.3.30"